added interaction with api and db, finished tests. This project is closed

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>telegrambots-client</artifactId>
             <version>9.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-meta</artifactId>
+            <version>9.2.0</version>
+        </dependency>
     </dependencies>
 </project>
